--- a/FBLA/src/main/java/deprecated-list.html
+++ b/FBLA/src/main/java/deprecated-list.html
@@ -86,8 +86,10 @@
 </tr>
 <tbody>
 <tr class="altColor">
-<td class="colOne"><a href="com/backend/MySQLMethods.html#changeName-java.lang.String-">com.backend.MySQLMethods.changeName(String)</a>
-<div class="block"><span class="deprecationComment"><a href="com/backend/MySQLMethods.html#changeName-java.lang.String-java.lang.String-"><code>MySQLMethods.changeName(String, String)</code></a></span></div>
+<td class="colOne"><a href="com/backend/MySQLMethods.html#changeName-java.lang.String-">com.Backend.MySQLMethods.changeName(String)</a>
+    <div class="block"><span class="deprecationComment"><a
+            href="com/backend/MySQLMethods.html#changeName-java.lang.String-java.lang.String-"><code>MySQLMethods.changeName(String, String)</code></a></span>
+    </div>
 </td>
 </tr>
 </tbody>
