--- a/FBLA/src/main/java/overview-tree.html
+++ b/FBLA/src/main/java/overview-tree.html
@@ -71,22 +71,27 @@
 <h1 class="title">Hierarchy For All Packages</h1>
 <span class="packageHierarchyLabel">Package Hierarchies:</span>
 <ul class="horizontal">
-<li><a href="com/backend/package-tree.html">com.backend</a></li>
+<li><a href="com/backend/package-tree.html">com.Backend</a></li>
 </ul>
 </div>
 <div class="contentContainer">
 <h2 title="Class Hierarchy">Class Hierarchy</h2>
-<ul>
-<li type="circle">java.lang.Object
-<ul>
-<li type="circle">com.backend.<a href="com/backend/Date.html" title="class in com.backend"><span class="typeNameLink">Date</span></a></li>
-<li type="circle">com.backend.<a href="com/backend/Event.html" title="class in com.backend"><span class="typeNameLink">Event</span></a></li>
-<li type="circle">com.backend.<a href="com/backend/FileMethods.html" title="class in com.backend"><span class="typeNameLink">FileMethods</span></a></li>
-<li type="circle">com.backend.<a href="com/backend/MySQLMethods.html" title="class in com.backend"><span class="typeNameLink">MySQLMethods</span></a></li>
-<li type="circle">com.backend.<a href="com/backend/Student.html" title="class in com.backend"><span class="typeNameLink">Student</span></a></li>
-</ul>
-</li>
-</ul>
+    <ul>
+        <li type="circle">java.lang.Object
+            <ul>
+                <li type="circle">com.Backend.<a href="com/backend/Date.html" title="class in com.Backend"><span
+                        class="typeNameLink">Date</span></a></li>
+                <li type="circle">com.Backend.<a href="com/backend/Event.html" title="class in com.Backend"><span
+                        class="typeNameLink">Event</span></a></li>
+                <li type="circle">com.Backend.<a href="com/backend/FileMethods.html" title="class in com.Backend"><span
+                        class="typeNameLink">FileMethods</span></a></li>
+                <li type="circle">com.Backend.<a href="com/backend/MySQLMethods.html" title="class in com.Backend"><span
+                        class="typeNameLink">MySQLMethods</span></a></li>
+                <li type="circle">com.Backend.<a href="com/backend/Student.html" title="class in com.Backend"><span
+                        class="typeNameLink">Student</span></a></li>
+            </ul>
+        </li>
+    </ul>
 </div>
 <!-- ======= START OF BOTTOM NAVBAR ====== -->
 <div class="bottomNav"><a name="navbar.bottom">
