--- a/FBLA/src/main/java/allclasses-noframe.html
+++ b/FBLA/src/main/java/allclasses-noframe.html
@@ -12,11 +12,11 @@
 <h1 class="bar">All&nbsp;Classes</h1>
 <div class="indexContainer">
 <ul>
-<li><a href="com/backend/Date.html" title="class in com.backend">Date</a></li>
-<li><a href="com/backend/Event.html" title="class in com.backend">Event</a></li>
-<li><a href="com/backend/FileMethods.html" title="class in com.backend">FileMethods</a></li>
-<li><a href="com/backend/MySQLMethods.html" title="class in com.backend">MySQLMethods</a></li>
-<li><a href="com/backend/Student.html" title="class in com.backend">Student</a></li>
+    <li><a href="com/backend/Date.html" title="class in com.Backend">Date</a></li>
+    <li><a href="com/backend/Event.html" title="class in com.Backend">Event</a></li>
+    <li><a href="com/backend/FileMethods.html" title="class in com.Backend">FileMethods</a></li>
+    <li><a href="com/backend/MySQLMethods.html" title="class in com.Backend">MySQLMethods</a></li>
+    <li><a href="com/backend/Student.html" title="class in com.Backend">Student</a></li>
 </ul>
 </div>
 </body>
